--- a/src/app/company/add-company/add-company.component.html
+++ b/src/app/company/add-company/add-company.component.html
@@ -108,36 +108,50 @@
                   </div>
                   <div class="card-body">
                       <div class="table-responsive">
-                          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                              <thead>
-                                  <tr>
-                                      <th>Name</th>
-                                      <th>Position</th>
-                                      <th>Office</th>
-                                      <th>Age</th>
-                                      <th>Start date</th>
-                                      <th>Salary</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr>
-                                      <td>Tiger Nixon</td>
-                                      <td>System Architect</td>
-                                      <td>Edinburgh</td>
-                                      <td>61</td>
-                                      <td>2011/04/25</td>
-                                      <td>$320,800</td>
-                                  </tr>
-                                  <tr>
-                                      <td>Garrett Winters</td>
-                                      <td>Accountant</td>
-                                      <td>Tokyo</td>
-                                      <td>63</td>
-                                      <td>2011/07/25</td>
-                                      <td>$170,750</td>
-                                  </tr>
-                                </tbody>
-                          </table>
+                        <div class="card card-primary">
+                            <div class="card-header">
+                              <h3 class="card-title">Add Company</h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <!-- form start -->
+                            <form (ngSubmit)="OnSubmit()">
+                              <div class="card-body">
+                               
+                                <div class="form-group">
+                                  <label for="CompanyName">Company Name</label>
+                                  <input type="text" id="CompanyName" name="CompanyName" [(ngModel)]="company.Name" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Email">Email Id</label>
+                                    <input type="text" id="Email" name="EmailId" [(ngModel)]="company.Email" class="form-control">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="TotalEmployee">Total Employee</label>
+                                    <input type="number" id="TotalEmployee" name="TotalEmployee" [(ngModel)]="company.TotalEmployee" class="form-control">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="Address">Address</label>
+                                    <input type="text" id="Address" name="Address" [(ngModel)]="company.Address" class="form-control">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="Active">Active</label>
+                                    <input type="checkbox" id="Active" name="Active" [(ngModel)]="company.IsCompanyActive" class="form-control">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="BranchName">Branch Name</label>
+                                    <input type="text" id="BranchName" name="BranchName" [(ngModel)]="company.BranchName"class="form-control">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="BranchAddress">Branch Address</label>
+                                    <input type="text" id="BranchAddress" name="BranchAddress" [(ngModel)]="company.BranchAddress" class="form-control">
+                                  </div>
+                              </div>
+                              <!-- /.card-body -->
+                              <div class="card-footer">
+                                <button type="submit" class="btn btn-primary">Add Company</button>
+                              </div>
+                            </form>
+                          </div>
                       </div>
                   </div>
               </div>
