--- a/src/app/company/list-company/list-company.component.html
+++ b/src/app/company/list-company/list-company.component.html
@@ -116,6 +116,7 @@
                                         <th>Total Employees</th>
                                         <th>Company Active</th>
                                         <th>Total Branch</th>
+                                        <th>Actions</th>    
                                     </tr>
                                 </thead>
                                 <tbody>
